# first-level-fighter

./: .gitignore  README.md  main.py  pyproject.toml
content/: abilities.csv  alignment.csv  equipment.csv  names.csv  species_bonuses.csv  template.md
src/: constants.py  generate.py  main.py  test_generate.py  test_write_sheet.py  write_sheet.py
src/first_level_fighter/: __init__.py  generate.py  main.py  write_sheet.py
src/first_level_fighter/content/: names.csv
tests/: test_generate.py  test_write_sheet.py
